--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include \
               -I$(top_srcdir)/src \
               -L$(HOME)/ix-epfl/libix \
               -I$(HOME)/ix-epfl/libix \
-              -I$(HOME)/ix-epfl/ix/inc 
+              -I$(HOME)/ix-epfl/ix/inc -lix
 
 include_HEADERS=include/uv.h include/uv-errno.h include/uv-threadpool.h include/uv-version.h
 
